# ifc_fmt_assignment

./: .gitignore  CMakeLists.txt  CMakeSettings.json  DESIGN.md  README.md
data/: sample_01.ifc  sample_02.ifc  sample_03.ifc
src/: helpers.cpp  helpers.h  ifcBlock.cpp  ifcBlock.h  ifcParser.cpp  ifcParser.h  main.cpp
tests/: test_helpers.cpp  tests.cpp
